--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link id="favicon" rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link id="favicon" rel="icon" type="image/svg+xml" href="/satulini.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Growroom</title>
+    <title>Satulini</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7008233253543982"
      crossorigin="anonymous"></script>
   </head>
