--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link id="favicon" rel="icon" type="image/svg+xml" href="/satulini.ico" />
+    <link id="favicon" rel="icon" type="image/x-icon" href="/Satulini.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Satulini</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7008233253543982"
